--- a/post/templates/post/post.html
+++ b/post/templates/post/post.html
@@ -22,7 +22,7 @@
         </div>
         <div class="photo">
             <a href="{%url 'post-details' post.id%}">
-                <img src="{{post.picture.url}}" alt="Alternative text"  style="width: 500px; height: 381px; object-fit: cover;" >
+                <img src="{{post.picture.url}}" alt="Alternative text" style="width: 500px; max-height: 600px; object-fit: contain;">
             </a>
         </div>
 
