--- a/templates/landing.html
+++ b/templates/landing.html
@@ -51,7 +51,7 @@
                     <i class="fas fa-photo-video"></i>
                 </div>
                 <h3>Rich Media Sharing</h3>
-                <p>Share photos, videos, and stories in high quality.</p>
+                <p>Share photos and stories in high quality.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">
