--- a/comment/templates/comment/comment.html
+++ b/comment/templates/comment/comment.html
@@ -14,10 +14,13 @@
             <div class="comment-header">
                 <div class="user-info">
                     <h5>{{ comment.author.profile.name }}</h5>
-                    <span class="comment-time">{{ comment.created_at|timesince }} ago</span>
+                    <span class="comment-time">{{ comment.created|timesince }} ago</span>
                 </div>
                 {% if user.is_authenticated and comment.author == user %}
                 <div class="comment-actions">
+                    <button class="edit-btn" onclick="toggleEditForm(this)">
+                        <i class="uil uil-edit"></i>
+                    </button>
                     <form action="{% url 'comment-delete' comment.id %}" method="POST" class="delete-form" onsubmit="return confirm('Are you sure you want to delete this comment?');">
                         {% csrf_token %}
                         <button type="submit" class="delete-btn">
@@ -28,7 +31,15 @@
                 {% endif %}
             </div>
 
-            <p class="comment-text">{{ comment.body }}</p>
+            <div class="comment-content">
+                <p class="comment-text">{{ comment.body }}</p>
+                <form class="edit-form" style="display: none;">
+                    {% csrf_token %}
+                    <input type="text" name="body" value="{{ comment.body }}" class="edit-input">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn" onclick="toggleEditForm(this)">Cancel</button>
+                </form>
+            </div>
             
             <div class="button-container">
                 {% include 'snippets/comment_like.html' %}
@@ -70,5 +81,19 @@
         const isHidden = replyForm.style.display === 'none';
         replyForm.style.display = isHidden ? 'block' : 'none';
         button.innerHTML = `<i class="uil uil-comment-dots"></i> ${isHidden ? 'Hide Replies' : 'Reply'}`;
+    }
+
+    function toggleEditForm(button) {
+        const commentContent = button.closest('.message-body').querySelector('.comment-content');
+        const commentText = commentContent.querySelector('.comment-text');
+        const editForm = commentContent.querySelector('.edit-form');
+        
+        if (editForm.style.display === 'none') {
+            commentText.style.display = 'none';
+            editForm.style.display = 'block';
+        } else {
+            commentText.style.display = 'block';
+            editForm.style.display = 'none';
+        }
     }
 </script>
