--- a/comment/templates/comment/reply.html
+++ b/comment/templates/comment/reply.html
@@ -9,21 +9,54 @@
     </div>
 
     <div class="message-body">
-        <h5>{{ reply.author.profile.name }}</h5>
-    </a>
-        <p class="text-muted">{{ reply.body }}</p>
-          <div class="button-container">
-
-            {%include 'snippets/reply_like.html' %}
-
-            {%  if user.is_authenticated and reply.author == user %} 
-                 <form action="{% url 'reply-delete' reply.id %}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this reply?');">
+        <div class="comment-header">
+            <div class="user-info">
+                <h5>{{ reply.author.profile.name }}</h5>
+                <span class="comment-time">{{ reply.created|timesince }} ago</span>
+            </div>
+            {% if user.is_authenticated and reply.author == user %}
+            <div class="comment-actions">
+                <button class="edit-btn" onclick="toggleEditForm(this)">
+                    <i class="uil uil-edit"></i>
+                </button>
+                <form action="{% url 'reply-delete' reply.id %}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this reply?');">
                     {% csrf_token %}
-                    <button type="submit" >
-                        <i class="uil uil-trash-alt"  style="font-size: 16px;margin-left:5px;">  </i>
+                    <button type="submit" class="delete-btn">
+                        <i class="uil uil-trash-alt"></i>
                     </button>
-                </form> 
-            {%endif%} 
-        </div>  
+                </form>
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="comment-content">
+            <p class="comment-text">{{ reply.body }}</p>
+            <form class="edit-form" style="display: none;">
+                {% csrf_token %}
+                <input type="text" name="body" value="{{ reply.body }}" class="edit-input">
+                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="button" class="btn" onclick="toggleEditForm(this)">Cancel</button>
+            </form>
+        </div>
+
+        <div class="button-container">
+            {%include 'snippets/reply_like.html' %}
+        </div>
     </div>
 </div>
+
+<script>
+    function toggleEditForm(button) {
+        const commentContent = button.closest('.message-body').querySelector('.comment-content');
+        const commentText = commentContent.querySelector('.comment-text');
+        const editForm = commentContent.querySelector('.edit-form');
+        
+        if (editForm.style.display === 'none') {
+            commentText.style.display = 'none';
+            editForm.style.display = 'block';
+        } else {
+            commentText.style.display = 'block';
+            editForm.style.display = 'none';
+        }
+    }
+</script>
